Bug 1739789 - Change search-related URI APIs and all other remaining ones to AUTF8String. r=mkmelin a=wsmwk