mailnews/imap/src/nsImapMailFolder.cpp
@@ -3537,7 +3537,7 @@ nsImapMailFolder::ReplayOfflineMoveCopy(const nsTArray<nsMsgKey>& aMsgKeys,
                                           getter_AddRefs(currentOp));
           if (currentOp) {
             nsCString opSrcUri;
-            currentOp->GetSourceFolderURI(getter_Copies(opSrcUri));
+            currentOp->GetSourceFolderURI(opSrcUri);
             if (opSrcUri.Equals(srcFolderUri)) {
               nsMsgKey srcMessageKey;
               currentOp->GetSrcMessageKey(&srcMessageKey);
@@ -6304,7 +6304,7 @@ nsresult nsImapMailFolder::GetClearedOriginalOp(
                "not an offline move op");
 
   nsCString sourceFolderURI;
-  op->GetSourceFolderURI(getter_Copies(sourceFolderURI));
+  op->GetSourceFolderURI(sourceFolderURI);
 
   nsresult rv;
   nsCOMPtr<nsIMsgFolder> sourceFolder;
@@ -6322,7 +6322,7 @@ nsresult nsImapMailFolder::GetClearedOriginalOp(
       nsCString moveDestination;
       nsCString thisFolderURI;
       GetURI(thisFolderURI);
-      returnOp->GetDestinationFolderURI(getter_Copies(moveDestination));
+      returnOp->GetDestinationFolderURI(moveDestination);
       if (moveDestination.Equals(thisFolderURI))
         returnOp->ClearOperation(nsIMsgOfflineImapOperation::kMoveResult);
     }
@@ -6336,7 +6336,7 @@ nsresult nsImapMailFolder::GetOriginalOp(
     nsIMsgDatabase** originalDB) {
   nsCOMPtr<nsIMsgOfflineImapOperation> returnOp;
   nsCString sourceFolderURI;
-  op->GetSourceFolderURI(getter_Copies(sourceFolderURI));
+  op->GetSourceFolderURI(sourceFolderURI);
 
   nsresult rv;
   nsCOMPtr<nsIMsgFolder> sourceFolder;
@@ -6562,7 +6562,7 @@ nsresult nsImapMailFolder::CopyMessagesOffline(
             if (originalOp) {
               nsCString srcFolderURI;
               srcFolder->GetURI(srcFolderURI);
-              sourceOp->GetSourceFolderURI(getter_Copies(originalSrcFolderURI));
+              sourceOp->GetSourceFolderURI(originalSrcFolderURI);
               sourceOp->GetMessageKey(&originalKey);
               if (isMove) sourceMailDB->RemoveOfflineOp(sourceOp);
               sourceOp = originalOp;
@@ -6581,8 +6581,7 @@ nsresult nsImapMailFolder::CopyMessagesOffline(
               imapMessageFlagsType newImapFlags = 0;
               message->GetMessageSize(&msgSize);
               message->GetFlags(&msgFlags);
-              sourceOp->SetDestinationFolderURI(
-                  folderURI.get());  // offline move
+              sourceOp->SetDestinationFolderURI(folderURI);  // offline move
               sourceOp->SetOperation(nsIMsgOfflineImapOperation::kMsgMoved);
               sourceOp->SetMsgSize(msgSize);
               newImapFlags = msgFlags & 0x7;
@@ -6590,8 +6589,7 @@ nsresult nsImapMailFolder::CopyMessagesOffline(
                 newImapFlags |= kImapMsgForwardedFlag;
               sourceOp->SetNewFlags(newImapFlags);
             } else
-              sourceOp->AddMessageCopyOperation(
-                  folderURI.get());  // offline copy
+              sourceOp->AddMessageCopyOperation(folderURI);  // offline copy
 
             sourceOp->GetOperation(&moveCopyOpType);
             srcMsgs.AppendObject(message);
@@ -6652,7 +6650,7 @@ nsresult nsImapMailFolder::CopyMessagesOffline(
                 database->RemoveOfflineOp(destOp);
               else {
                 SetFlag(nsMsgFolderFlags::OfflineEvents);
-                destOp->SetSourceFolderURI(originalSrcFolderURI.get());
+                destOp->SetSourceFolderURI(originalSrcFolderURI);
                 destOp->SetSrcMessageKey(originalKey);
                 addedKeys.AppendElement(fakeBase + sourceKeyIndex);
                 addedHdrs.AppendObject(newMailHdr);
@@ -7586,7 +7584,7 @@ nsresult nsImapMailFolder::CopyFileToOfflineStore(nsIFile* srcFile,
     nsCString destFolderUri;
     GetURI(destFolderUri);
     op->SetOperation(nsIMsgOfflineImapOperation::kMoveResult);
-    op->SetDestinationFolderURI(destFolderUri.get());
+    op->SetDestinationFolderURI(destFolderUri);
     SetFlag(nsMsgFolderFlags::OfflineEvents);
   }
 
