mailnews/local/src/nsMailboxService.cpp
@@ -585,7 +585,7 @@ nsresult nsMailboxService::DisplayMessageForPrinting(
 NS_IMETHODIMP nsMailboxService::Search(nsIMsgSearchSession* aSearchSession,
                                        nsIMsgWindow* aMsgWindow,
                                        nsIMsgFolder* aMsgFolder,
-                                       const char* aMessageUri) {
+                                       const nsACString& aMessageUri) {
   return NS_ERROR_NOT_IMPLEMENTED;
 }
 
